# 3d22d

./: 3d22d_config.txt  CMakeLists.txt  LobbyA_result.ply  LobbyB_result.ply  LobbyC_result.ply  floorAligned_1-12_result.ply  wallext_result.ply
src/: 3d22d.cpp
